--- a/content/docs/html.mdx
+++ b/content/docs/html.mdx
@@ -18,15 +18,15 @@ It's recommend that you use a package manager to install Theme Toggles. This wil
 
 <CodeGroup title="Install"  >
 
-    ```bash {{ language: 'console', title: 'npm' }}
+    ```bash {{ language: 'bash', title: 'npm' }}
     npm install @theme-toggles/core
     ```
 
-    ```bash {{ language: 'console', title: 'yarn' }}
+    ```bash {{ language: 'bash', title: 'yarn' }}
     yarn add @theme-toggles/core
     ```
 
-    ```bash {{ language: 'console', title: 'pnpm' }}
+    ```bash {{ language: 'bash', title: 'pnpm' }}
     pnpm install @theme-toggles/core
     ```
 
@@ -39,14 +39,14 @@ Replace `{{toggle name}}` with the name of the Theme Toggle you want to use and 
 
 <CodeGroup title="CDN"  >
 
-    ```html {{ title: 'jsDelivr' }}
+    ```html {{ title: 'jsDelivr', language: 'html' }}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/theme-toggles@4.10.1/css/{{variant}}/{{toggle name}}.min.css">
     ```
-    ```html {{ title: 'unpkg' }}
+    ```html {{ title: 'unpkg', language: 'html' }}
     <link rel="stylesheet" href="https://unpkg.com/npm/theme-toggles@4.10.1/css/{{variant}}/{{toggle name}}.min.css">
 
     ```
-    ```html {{ title: 'cdnjs' }}
+    ```html {{ title: 'cdnjs', language: 'html' }}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/theme-toggles@4.10.1/css/{{variant}}/{{toggle name}}.min.css">
     ```
 
