--- a/packages/core/src/stories/intro.stories.mdx
+++ b/packages/core/src/stories/intro.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta } from "@storybook/addon-docs";
+import { Meta } from '@storybook/blocks';
 import StoryPreview from "./assets/dark-side-story.png";
 
 <Meta title="Intro" />
